# elarning-be

./: .flake8  .gitignore  .pre-commit-config.yaml  db.sqlite3  docker-compose.yml  pyproject.toml  xpyproject.toml
backend/: .env  settings.py  urls.py  utils.py
docker/: Dockerfile  how-to.txt  start_django.sh
lessons/: admin.py  filtersets.py  models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_question_questionchoice.py  0003_lesson_image_url.py  0004_alter_lesson_image_url.py  0005_lesson_slug.py  0006_alter_questionchoice_question.py  0007_lesson_stripped_content.py
templates/admin/: base_site.html
