[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dan Sto. Domingo <danielesto.domingo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
